EasyPlayscript/Parsing/Visitor/PlayscriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from EasyPlayscript/EasyPlayscript/core/playscript/definition/PlayscriptParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

 namespace EasyPlayscript.Parsing; 
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class PlayscriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		COMMENT=1, AT=2, LPAREN=3, RPAREN=4, LBRACKET=5, RBRACKET=6, IDENTIFIER=7, 
		STRING_LITERAL=8, WS=9, NEWLINE=10, BLANK_LINE=11, SINGLE_NEWLINE=12, 
		TEXT=13, C_WS=14;
	public const int
		RULE_playscript = 0, RULE_statement = 1, RULE_externalCall = 2, RULE_scriptBlock = 3, 
		RULE_scriptContent = 4, RULE_sentence = 5, RULE_sentencePart = 6, RULE_internalCall = 7;
	public static readonly string[] ruleNames = {
		"playscript", "statement", "externalCall", "scriptBlock", "scriptContent", 
		"sentence", "sentencePart", "internalCall"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'@'", null, null, "'['"
	};
	private static readonly string[] _SymbolicNames = {
		null, "COMMENT", "AT", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "IDENTIFIER", 
		"STRING_LITERAL", "WS", "NEWLINE", "BLANK_LINE", "SINGLE_NEWLINE", "TEXT", 
		"C_WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "PlayscriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static PlayscriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public PlayscriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public PlayscriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PlayscriptContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(PlayscriptParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public PlayscriptContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_playscript; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlayscript(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlayscriptContext playscript() {
		PlayscriptContext _localctx = new PlayscriptContext(Context, State);
		EnterRule(_localctx, 0, RULE_playscript);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 19;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AT || _la==LBRACKET) {
				{
				{
				State = 16;
				statement();
				}
				}
				State = 21;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 22;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExternalCallContext externalCall() {
			return GetRuleContext<ExternalCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ScriptBlockContext scriptBlock() {
			return GetRuleContext<ScriptBlockContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 26;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case AT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 24;
				externalCall();
				}
				break;
			case LBRACKET:
				EnterOuterAlt(_localctx, 2);
				{
				State = 25;
				scriptBlock();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExternalCallContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(PlayscriptParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PlayscriptParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(PlayscriptParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(PlayscriptParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(PlayscriptParser.RPAREN, 0); }
		public ExternalCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_externalCall; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExternalCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExternalCallContext externalCall() {
		ExternalCallContext _localctx = new ExternalCallContext(Context, State);
		EnterRule(_localctx, 4, RULE_externalCall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 28;
			Match(AT);
			State = 29;
			Match(IDENTIFIER);
			State = 30;
			Match(LPAREN);
			State = 31;
			Match(STRING_LITERAL);
			State = 32;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScriptBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACKET() { return GetToken(PlayscriptParser.LBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACKET() { return GetToken(PlayscriptParser.RBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ScriptContentContext[] scriptContent() {
			return GetRuleContexts<ScriptContentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ScriptContentContext scriptContent(int i) {
			return GetRuleContext<ScriptContentContext>(i);
		}
		public ScriptBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScriptBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptBlockContext scriptBlock() {
		ScriptBlockContext _localctx = new ScriptBlockContext(Context, State);
		EnterRule(_localctx, 6, RULE_scriptBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			Match(LBRACKET);
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14340L) != 0)) {
				{
				{
				State = 35;
				scriptContent();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 41;
			Match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScriptContentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SentenceContext sentence() {
			return GetRuleContext<SentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InternalCallContext internalCall() {
			return GetRuleContext<InternalCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BLANK_LINE() { return GetToken(PlayscriptParser.BLANK_LINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_NEWLINE() { return GetToken(PlayscriptParser.SINGLE_NEWLINE, 0); }
		public ScriptContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptContent; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitScriptContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ScriptContentContext scriptContent() {
		ScriptContentContext _localctx = new ScriptContentContext(Context, State);
		EnterRule(_localctx, 8, RULE_scriptContent);
		try {
			State = 47;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TEXT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 43;
				sentence();
				}
				break;
			case AT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 44;
				internalCall();
				}
				break;
			case BLANK_LINE:
				EnterOuterAlt(_localctx, 3);
				{
				State = 45;
				Match(BLANK_LINE);
				}
				break;
			case SINGLE_NEWLINE:
				EnterOuterAlt(_localctx, 4);
				{
				State = 46;
				Match(SINGLE_NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SentenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SentencePartContext[] sentencePart() {
			return GetRuleContexts<SentencePartContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentencePartContext sentencePart(int i) {
			return GetRuleContext<SentencePartContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SINGLE_NEWLINE() { return GetTokens(PlayscriptParser.SINGLE_NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SINGLE_NEWLINE(int i) {
			return GetToken(PlayscriptParser.SINGLE_NEWLINE, i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sentence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSentence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SentenceContext sentence() {
		SentenceContext _localctx = new SentenceContext(Context, State);
		EnterRule(_localctx, 10, RULE_sentence);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			sentencePart();
			State = 54;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 50;
					Match(SINGLE_NEWLINE);
					State = 51;
					sentencePart();
					}
					} 
				}
				State = 56;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SentencePartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] TEXT() { return GetTokens(PlayscriptParser.TEXT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT(int i) {
			return GetToken(PlayscriptParser.TEXT, i);
		}
		public SentencePartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sentencePart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSentencePart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SentencePartContext sentencePart() {
		SentencePartContext _localctx = new SentencePartContext(Context, State);
		EnterRule(_localctx, 12, RULE_sentencePart);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 57;
					Match(TEXT);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 60;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InternalCallContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AT() { return GetToken(PlayscriptParser.AT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(PlayscriptParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(PlayscriptParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(PlayscriptParser.STRING_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(PlayscriptParser.RPAREN, 0); }
		public InternalCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_internalCall; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPlayscriptParserVisitor<TResult> typedVisitor = visitor as IPlayscriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInternalCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InternalCallContext internalCall() {
		InternalCallContext _localctx = new InternalCallContext(Context, State);
		EnterRule(_localctx, 14, RULE_internalCall);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(AT);
			State = 63;
			Match(IDENTIFIER);
			State = 64;
			Match(LPAREN);
			State = 65;
			Match(STRING_LITERAL);
			State = 66;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
